--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,19 +1,12 @@
 submodule :
 
-  wTools :
-    path : npm:///wTools
-    enabled : 0
   wModuleForTesting1 :
-    path : npm:///wmodulefortesting1
-    enabled : 0
+    path : git+https:///github.com/Wandalen/wModuleForTesting1.git
+    enabled : 1
   wModuleForTesting2 :
-    path : npm:///wmodulefortesting2
-    enabled : 0
-  Self :
-   path : hd://.
-   enabled : 0
-   criterion :
-     development : 1
+    path : git+https:///github.com/Wandalen/wModuleForTesting2.git
+    enabled : 1
+
   wTesting :
     path : npm:///wTesting
     enabled : 0
