Remove dependency `Tools`

--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,19 +1,16 @@
 submodule :
 
-  wTools :
-    path : npm:///wTools
-    enabled : 0
   wModuleForTesting1 :
     path : npm:///wmodulefortesting1
     enabled : 0
   wModuleForTesting2 :
     path : npm:///wmodulefortesting2
     enabled : 0
-  Self :
-   path : hd://.
-   enabled : 0
-   criterion :
-     development : 1
+  # Self :
+  #  path : hd://.
+  #  enabled : 0
+  #  criterion :
+  #    development : 1
   wTesting :
     path : npm:///wTesting
     enabled : 0
