--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,10 +1,10 @@
 submodule :
 
   wModuleForTesting1 :
-    path : git+https:///github.com/Wandalen/wModuleForTesting1.git
+    path : git+https:///github.com/Wandalen/wModuleForTesting1.git/@master
     enabled : 1
   wModuleForTesting2 :
-    path : git+https:///github.com/Wandalen/wModuleForTesting2.git
+    path : git+https:///github.com/Wandalen/wModuleForTesting2.git/@master
     enabled : 1
   # Self :
   #  path : hd://.
