--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,17 +1,17 @@
 submodule :
 
-  wModuleForTesting1 :
+  ModuleForTesting1 :
     path : git+https:///github.com/Wandalen/wModuleForTesting1.git/@gamma
-    enabled : 1
-  wModuleForTesting2 :
+    enabled : 0
+  ModuleForTesting2 :
     path : git+https:///github.com/Wandalen/wModuleForTesting2.git/@gamma
-    enabled : 1
+    enabled : 0
   # Self :
   #  path : hd://.
   #  enabled : 0
   #  criterion :
   #    development : 1
-  wTesting :
+  Testing :
     path : npm:///wTesting
     enabled : 0
     criterion :
