--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wmodulefortesting12",
-  "version" : "0.0.45",
+  "version" : "0.0.46",
   "engine" : "node >= 8.0.0",
   "description" : "Module for testing. This module is test assets not intended to be used with another purpose.",
   "author" : "Kostiantyn Wandalen <wanalen@willbe.so>",
@@ -10,8 +10,8 @@
     { "name" : "Kostiantyn Wandalen", "email" : "wanalen@willbe.so" },
     { "name" : "Kryvoruchko Dmytro", "email" : "dm.vict.kr@gmail.com" }
   ],
-  "main" : "proto/dwtools/abase/l3/Include.s",
-  "files" : [ "proto/dwtools/abase/l3", "out" ],
+  "main" : "proto/dwtools/abase/l3/testing12/Include.s",
+  "files" : [ "proto/dwtools/abase/l3/testing12", "proto/dwtools/Tools.s", "out" ],
   "scripts" : { "test" : "wtest .run proto/**", "docgen" : "wdocgen proto" },
   "repository" :
   {
@@ -22,7 +22,7 @@
   {
     "url" : "https://github.com/Wandalen/wModuleForTesting12/issues"
   },
-  "dependencies" : { "wmodulefortesting1" : "alpha", "wmodulefortesting2" : "alpha" },
-  "devDependencies" : { "wmodulefortesting12" : "file:.", "wTesting" : "alpha" },
+  "dependencies" : { "wmodulefortesting1" : "", "wmodulefortesting2" : "" },
+  "devDependencies" : { "wmodulefortesting12" : "file:.", "wTesting" : "" },
   "keywords" : [ "willbe", "test" ]
 }
