--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,10 +1,10 @@
 submodule :
 
   ModuleForTesting1 :
-    path : git+https:///github.com/Wandalen/wModuleForTesting1.git/@gamma
+    path : git+https:///github.com/Wandalen/wModuleForTesting1.git/!alpha
     enabled : 0
   ModuleForTesting2 :
-    path : git+https:///github.com/Wandalen/wModuleForTesting2.git/@gamma
+    path : git+https:///github.com/Wandalen/wModuleForTesting2.git/!alpha
     enabled : 0
   # Self :
   #  path : hd://.
@@ -56,7 +56,7 @@ path :
       content : prime
 
   entry.proto.no.tests :
-    path : proto/dwtools/abase/l3/testing12/Include.s
+    path : proto/dwtools/testing/l3/testing12/Include.s
     criterion :
       tests : 'no.tests'
   entry.proto.only.tests :
@@ -64,11 +64,11 @@ path :
     criterion :
       tests : 'only.tests'
 
-  # npm.entry : proto/dwtools/abase/Layer2.s
+  # npm.entry : proto/dwtools/testing/Layer2.s
   # npm.files : proto
 
   entry.out.raw.debug :
-    path : '{path::out.*=1}/proto/dwtools/abase/l3/testing12/Include.s'
+    path : '{path::out.*=1}/proto/dwtools/testing/l3/testing12/Include.s'
     criterion :
       debug : [ debug, release ]
       raw : raw
