--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wmodulefortesting12",
-  "version" : "0.0.100",
+  "version" : "0.0.101",
   "engine" : "node >= 10.0.0",
   "description" : "Module for testing. This module is a test asset and not intended to be used with another purpose.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
@@ -22,7 +22,7 @@
   {
     "url" : "https://github.com/Wandalen/wModuleForTesting12/issues"
   },
-  "dependencies" : { "wmodulefortesting1" : "alpha", "wmodulefortesting2" : "alpha" },
-  "devDependencies" : { "wmodulefortesting12" : "file:.", "eslint" : "7.1.0", "wTesting" : "alpha" },
+  "dependencies" : { "wmodulefortesting1" : "latest", "wmodulefortesting2" : "latest" },
+  "devDependencies" : { "wmodulefortesting12" : "file:.", "eslint" : "7.1.0", "wTesting" : "latest" },
   "keywords" : [ "willbe", "test" ]
 }
