--- a/package.json
+++ b/package.json
@@ -1,28 +1,48 @@
 {
-  "name" : "wmodulefortesting12",
-  "version" : "0.0.109",
-  "engine" : "node >= 10.0.0",
-  "description" : "Module for testing. This module is a test asset and not intended to be used with another purpose.",
-  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
-  "license" : "MIT",
-  "contributors" :
-  [
-    { "name" : "Kostiantyn Wandalen", "email" : "wanalen@01.school" },
-    { "name" : "Kryvoruchko Dmytro", "email" : "dm.vict.kr@gmail.com" }
+  "name": "wmodulefortesting12",
+  "version": "0.0.110",
+  "engine": "node >= 10.0.0",
+  "description": "Module for testing. This module is a test asset and not intended to be used with another purpose.",
+  "author": "Kostiantyn Wandalen <wanalen@01.school>",
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Kostiantyn Wandalen",
+      "email": "wanalen@01.school"
+    },
+    {
+      "name": "Kryvoruchko Dmytro",
+      "email": "dm.vict.kr@gmail.com"
+    }
   ],
-  "main" : "proto/wtools/testing/l3/testing12/Include.s",
-  "files" : [ "proto/wtools/testing/l3/testing12", "proto/wtools/testing/Basic.s", "out" ],
-  "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen proto" },
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/Wandalen/wModuleForTesting12.git"
+  "main": "proto/wtools/testing/l3/testing12/Include.s",
+  "files": [
+    "proto/wtools/testing/l3/testing12",
+    "proto/wtools/testing/Basic.s",
+    "out"
+  ],
+  "scripts": {
+    "test": "wtest .run 'proto/**' rapidity:-3",
+    "docgen": "wdocgen proto"
   },
-  "bugs" :
-  {
-    "url" : "https://github.com/Wandalen/wModuleForTesting12/issues"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Wandalen/wModuleForTesting12.git"
   },
-  "dependencies" : { "wmodulefortesting1" : "alpha", "wmodulefortesting2" : "alpha" },
-  "devDependencies" : { "wmodulefortesting12" : "file:.", "eslint" : "7.1.0", "wTesting" : "alpha" },
-  "keywords" : [ "willbe", "test" ]
+  "bugs": {
+    "url": "https://github.com/Wandalen/wModuleForTesting12/issues"
+  },
+  "dependencies": {
+    "wmodulefortesting1": "alpha",
+    "wmodulefortesting2": "alpha"
+  },
+  "devDependencies": {
+    "eslint": "7.1.0",
+    "wTesting": "alpha",
+    "wmodulefortesting12": "file:."
+  },
+  "keywords": [
+    "willbe",
+    "test"
+  ]
 }
