--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wmodulefortesting12",
-  "version": "0.0.128",
+  "version": "0.0.129",
   "engine": "node >= 10.0.0",
   "description": "Module for testing. This module is a test asset and not intended to be used with another purpose.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
@@ -33,12 +33,12 @@
     "url": "https://github.com/Wandalen/wModuleForTesting12/issues"
   },
   "dependencies": {
-    "wmodulefortesting1": "gamma",
-    "wmodulefortesting2": "gamma"
+    "wmodulefortesting1": "delta",
+    "wmodulefortesting2": "delta"
   },
   "devDependencies": {
     "eslint": "7.1.0",
-    "wTesting": "gamma",
+    "wTesting": "delta",
     "wmodulefortesting12": "file:."
   },
   "keywords": [
