--- a/package.json
+++ b/package.json
@@ -1,48 +1,28 @@
 {
-  "name": "wmodulefortesting12",
-  "version": "0.0.134",
-  "engine": "node >= 10.0.0",
-  "description": "Module for testing. This module is a test asset and not intended to be used with another purpose.",
-  "author": "Kostiantyn Wandalen <wanalen@01.school>",
-  "license": "MIT",
-  "contributors": [
-    {
-      "name": "Kostiantyn Wandalen",
-      "email": "wanalen@01.school"
-    },
-    {
-      "name": "Kryvoruchko Dmytro",
-      "email": "dm.vict.kr@gmail.com"
-    }
+  "name" : "wmodulefortesting12",
+  "version" : "0.0.135",
+  "engine" : "node >= 10.0.0",
+  "description" : "Module for testing. This module is a test asset and not intended to be used with another purpose.",
+  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
+  "license" : "MIT",
+  "contributors" :
+  [
+    { "name" : "Kostiantyn Wandalen", "email" : "wanalen@01.school" },
+    { "name" : "Kryvoruchko Dmytro", "email" : "dm.vict.kr@gmail.com" }
   ],
-  "main": "proto/wtools/testing/l3/testing12/Include.s",
-  "files": [
-    "proto/wtools/testing/l3/testing12",
-    "proto/wtools/testing/Basic.s",
-    "out",
-    "proto/node_modules"
-  ],
-  "scripts": {
-    "test": "wtest .run 'proto/**' rapidity:-3",
-    "docgen": "wdocgen proto"
+  "main" : "/pro/module/wModuleForTesting12/proto/node_modules/wmodulefortesting12",
+  "files" : [ "proto/wtools/testing/l3/testing12", "proto/wtools/testing/Basic.s", "out", "proto/node_modules" ],
+  "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen proto" },
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/Wandalen/wModuleForTesting12.git"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Wandalen/wModuleForTesting12.git"
+  "bugs" :
+  {
+    "url" : "https://github.com/Wandalen/wModuleForTesting12/issues"
   },
-  "bugs": {
-    "url": "https://github.com/Wandalen/wModuleForTesting12/issues"
-  },
-  "dependencies": {
-    "wmodulefortesting1": "delta",
-    "wmodulefortesting2": "delta"
-  },
-  "devDependencies": {
-    "eslint": "7.1.0",
-    "wTesting": "delta"
-  },
-  "keywords": [
-    "willbe",
-    "test"
-  ]
+  "dependencies" : { "wmodulefortesting1" : "delta", "wmodulefortesting2" : "delta" },
+  "devDependencies" : { "eslint" : "7.1.0", "wTesting" : "delta" },
+  "keywords" : [ "willbe", "test" ]
 }
