--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wmodulefortesting12",
-  "version" : "0.0.151",
+  "version" : "0.0.152",
   "engine" : "node >= 10.0.0",
   "description" : "Module for testing. This module is a test asset and not intended to be used with another purpose.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
@@ -12,7 +12,7 @@
   ],
   "main" : "proto/node_modules/wmodulefortesting12",
   "files" : [ "proto/wtools/testing/l3/testing12", "proto/wtools/testing/Basic.s", "out", "proto/node_modules" ],
-  "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen proto" },
+  "scripts" : {},
   "repository" :
   {
     "type" : "git",
@@ -23,6 +23,6 @@
     "url" : "https://github.com/Wandalen/wModuleForTesting12/issues"
   },
   "dependencies" : { "wmodulefortesting1" : "delta", "wmodulefortesting2" : "delta" },
-  "devDependencies" : { "eslint" : "7.1.0", "wTesting" : "delta" },
+  "devDependencies" : {},
   "keywords" : [ "willbe", "test" ]
 }
